v 0.10.0 (2018-04-11)
---------------------
* No changes since v0.9.3

Beta v0.9.3 (2018-01-25)
------------------------
* Add context menu to Key Manager
* Fix some keys failing to load when using mono --verify-all

Beta v0.9.2 (2017-12-20)
------------------------
* Add support for aes256-ctr cipher in OpenSSH private key files
* Experimental support for Windows OpenSSH
* Additional error message when key fails to load

Beta v0.9.1 (2017-03-06)
------------------------
* Fix some high DPI scaling issues on Windows
* Fix some layout issues on Mono
* Fix loading keys larger than 4096 bytes into Pageant
* Ignore keys in Recycle Bin when closing/locking database
* Add password group context menu item for loading all keys in a group
* Fix each URL being run multiple times when multiple keys are selected

Beta v0.9.0 (2017-01-18)
------------------------
* Change keyboard shortcuts to use "M" instead of "L"
* Fix lifetime checkbox not working (thanks Matthew Rhoten)
* KeePass window moves to bottom z-order after picking a key
* Confirmation dialog is system modal (thanks Alan Reyes)
* New option to ignore missing key files (thanks Alan Reyes)
* Can now use environment variables in key file path (thanks Alan Reyes)
* Rearrange columns in KeeAgent manager

v0.8.1 (2016-07-28)
-------------------
* Fixed incorrect assembly version

v0.8.0 (2016-07-28)
-------------------
* Close key manager dialog when ESC is pressed
* Add margins in key manager dialog

Beta v0.7.12 (2016-03-21)
-------------------------
* Change keyboard shortcuts to use "L" instead of "K".
* Confirm constraint checkbox in "Edit Entry" dialog is not shown when global
  confirmation option is enabled.
* Key picker dialog is activated when shown and can now use arrow keys and
  enter key to pick a key without having to use mouse or tab.
* Extend socket timeout from 2 seconds to 5 seconds.
* Fix Agent Manager dialog buttons not all visible on Mono.