@@ -1,3 +1,7 @@
+Unreleased
+----------
+* Fix comptibility with KeePass 2.39
+
 v 0.10.0 (2018-04-11)
 ---------------------
 * No changes since v0.9.3
